--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -253,7 +253,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/29/n10003609.md#1" target="_blank">大逃港：哪里有自由，哪里就是我的祖国！</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977691.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(1) 不一样的人生</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/9/n10131106.md#1" target="_blank">林辉：北京四中老师们健忘背后的残酷真相</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/4/26/n2096078.md#1" target="_blank">载入史册的一幕 中南海万人上访</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
